Nova atualização do projeto 4

--- a/styles/style.css
+++ b/styles/style.css
@@ -248,12 +248,12 @@
 
 .person_name_feynman {
   top: -30px;
-  right: 319px;
+  left: 319px;
 }
 
 .person_name_burbidge {
   top: 96px;
-  right: 124px;
+  right: 125px;
 }
 
 .person_name_cannon {
